--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "cypress": "^6.4.0",
+    "cypress-file-upload": "^5.0.2"
   }
 }
